# msiplib

./: .gitattributes  .gitignore  README.md  env-msiplib.yml  pyproject.toml  setup.py
docs/: README  conf.py  conventions.rst  index.rst  refs.bib  todolist.rst  zreferences.rst
docs/_ext/: class_index.py  function_index.py
docs/_static/: code.css  code_ref.css  function_separator.css
docs/_templates/: genindex.html
docs/_templates/autoapi/: module.rst
docs/index/: classindex.rst  classindex_modules.rst  functionindex.rst  functionindex_modules.rst
examples/: MS.py  ROF.py  grain_angle_example.py  motif_atoms_dof_example.py  motif_atoms_dof_example_ipynb.py  motif_extraction_example.py  primitive_unit_cell_vectors_example.py  primitive_unit_cell_vectors_examples_ipynb.py
examples/images/: Nc3Nm.nc  bumps3.nc  doubleSingle.nc  hexVacancy.nc
msiplib/: __init__.py  config_loader.py  decomposition.py  emic.py  finite_differences.py  grain_angle.py  metrics.py  misc.py  motif.py  motif_atoms_dof.py  optimization.py  proximal_mappings.py  registration.py  unit_cell_from_real_space.py
msiplib/hsi/: kernels.py
msiplib/image/: manipulators.py
msiplib/io/: __init__.py  emic.py  segmentation.py  terminal.py
msiplib/segmentation/: __init__.py  indicator_functions.py  visualization.py
tests/: test_docs.py  test_motif.py  test_optimization.py  test_registration.py  test_unit_cell_from_real_space.py
tools/: get_motif_atoms.py  get_motif_atoms.yaml  match_series.py  match_series.yaml
tools/hsi_segmentation/: hsi_segmentation.py
(+6 files in other folders)
